adaugat ex 2,3 lab3

--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -2,15 +2,15 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "(L ⟂ O | S)\n",
-            "(M ⟂ O | S)\n",
+            "(O ⟂ M | S)\n",
+            "(O ⟂ L | S)\n",
             "True\n",
             "+------+----------+\n",
             "| S    |   phi(S) |\n",
@@ -23,7 +23,7 @@
         }
       ],
       "source": [
-        "#a\n",
+        "#ex 1a\n",
         "from pgmpy.models import DiscreteBayesianNetwork\n",
         "\n",
         "model = DiscreteBayesianNetwork([('S', 'O'), ('S', 'L'), ('S', 'M'), ('L', 'M')])\n",
@@ -63,6 +63,189 @@
         "posterior = inference.query(variables=['S'], evidence={'O': 1, 'L': 1, 'M': 1})\n",
         "print(posterior)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.31808333333333333\n",
+            "+----------+--------------+\n",
+            "| Color    |   phi(Color) |\n",
+            "+==========+==============+\n",
+            "| Color(0) |       0.3167 |\n",
+            "+----------+--------------+\n",
+            "| Color(1) |       0.4333 |\n",
+            "+----------+--------------+\n",
+            "| Color(2) |       0.2500 |\n",
+            "+----------+--------------+\n",
+            "Bayesian 0.3167\n",
+            "No Bayesian 0.3181\n"
+          ]
+        }
+      ],
+      "source": [
+        "#ex 2:\n",
+        "#ex1 lab2\n",
+        "import random\n",
+        "def ex1():\n",
+        "    r=3\n",
+        "    b=4\n",
+        "    bl=2\n",
+        "    z=random.randint(1,6)\n",
+        "    if z==2 or z==3 or z==5:\n",
+        "        bl=bl+1\n",
+        "    elif z==6:\n",
+        "        r=r+1\n",
+        "    else:\n",
+        "        b=b+1\n",
+        "\n",
+        "    total=[\"red\"]*r+[\"blue\"]*b+[\"black\"]*bl\n",
+        "    return random.choice(total)\n",
+        "\n",
+        "#b\n",
+        "\n",
+        "suma=0\n",
+        "for i in range(12000):\n",
+        "    if ex1()==\"red\":\n",
+        "        suma=suma+1\n",
+        "\n",
+        "print(suma/12000)\n",
+        "\n",
+        "#cu bayesian\n",
+        "\n",
+        "from pgmpy.models import DiscreteBayesianNetwork\n",
+        "from pgmpy.factors.discrete import TabularCPD\n",
+        "from pgmpy.inference import VariableElimination\n",
+        "\n",
+        "model = DiscreteBayesianNetwork([('Z', 'Color')])\n",
+        "\n",
+        "cpd_z = TabularCPD(variable='Z', variable_card=6,\n",
+        "                   values=[[1/6]] * 6)\n",
+        "\n",
+        "def compute_probs(r, b, bl):\n",
+        "    total = r + b + bl\n",
+        "    return [r/total, b/total, bl/total]\n",
+        "\n",
+        "color_probs = [\n",
+        "    compute_probs(3,5,2),\n",
+        "    compute_probs(3,4,3),\n",
+        "    compute_probs(3,4,3),\n",
+        "    compute_probs(3,5,2),\n",
+        "    compute_probs(3,4,3),\n",
+        "    compute_probs(4,4,2),\n",
+        "]\n",
+        "\n",
+        "color_probs_T = list(map(list, zip(*color_probs)))\n",
+        "\n",
+        "cpd_color = TabularCPD(variable='Color', variable_card=3,\n",
+        "                       values=color_probs_T,\n",
+        "                       evidence=['Z'],\n",
+        "                       evidence_card=[6])\n",
+        "\n",
+        "model.add_cpds(cpd_z, cpd_color)\n",
+        "assert model.check_model()\n",
+        "\n",
+        "inference = VariableElimination(model)\n",
+        "posterior = inference.query(variables=['Color'])\n",
+        "print(posterior)\n",
+        "\n",
+        "bn_red_prob = posterior.values[0]\n",
+        "\n",
+        "print(f\"Bayesian {bn_red_prob:.4f}\")\n",
+        "print(f\"No Bayesian {suma/12000:.4f}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+------------+----------------+\n",
+            "| Starter    |   phi(Starter) |\n",
+            "+============+================+\n",
+            "| Starter(0) |         0.4529 |\n",
+            "+------------+----------------+\n",
+            "| Starter(1) |         0.5471 |\n",
+            "+------------+----------------+\n"
+          ]
+        }
+      ],
+      "source": [
+        "#ex3\n",
+        "from pgmpy.models import DiscreteBayesianNetwork\n",
+        "from pgmpy.factors.discrete import TabularCPD\n",
+        "from pgmpy.inference import VariableElimination\n",
+        "import numpy as np\n",
+        "from scipy.stats import binom\n",
+        "\n",
+        "model = DiscreteBayesianNetwork([\n",
+        "    ('Starter', 'N'),\n",
+        "    ('Starter', 'Flipper'),\n",
+        "    ('N', 'M'),\n",
+        "    ('Flipper', 'M'),\n",
+        "    ('Starter', 'Winner'),\n",
+        "    ('N', 'Winner'),\n",
+        "    ('M', 'Winner')\n",
+        "])\n",
+        "\n",
+        "cpd_starter = TabularCPD('Starter', 2, [[0.5], [0.5]])\n",
+        "\n",
+        "values_n = np.array([[1/6]*2]*6)\n",
+        "cpd_n = TabularCPD('N', 6, values=values_n, evidence=['Starter'], evidence_card=[2])\n",
+        "\n",
+        "cpd_flipper = TabularCPD('Flipper', 2,\n",
+        "                         values=[[0,1],\n",
+        "                                 [1,0]],\n",
+        "                         evidence=['Starter'], evidence_card=[2])\n",
+        "\n",
+        "variable_card_M = 13\n",
+        "cpd_m_values = np.zeros((variable_card_M, 6*2))\n",
+        "\n",
+        "for n_idx in range(6):\n",
+        "    n = n_idx + 1\n",
+        "    for f_idx in range(2):\n",
+        "        p_heads = 0.5 if f_idx == 0 else 4/7\n",
+        "        flips = 2 * n\n",
+        "        pmf = np.array([binom.pmf(k, flips, p_heads) if k <= flips else 0 for k in range(variable_card_M)])\n",
+        "        col_idx = n_idx*2 + f_idx\n",
+        "        cpd_m_values[:, col_idx] = pmf\n",
+        "\n",
+        "cpd_m = TabularCPD('M', variable_card_M, cpd_m_values,\n",
+        "                   evidence=['N', 'Flipper'], evidence_card=[6,2])\n",
+        "\n",
+        "cpd_winner_values = np.zeros((2, 2*6*variable_card_M))\n",
+        "\n",
+        "for starter in range(2):\n",
+        "    for n_idx in range(6):\n",
+        "        n = n_idx + 1\n",
+        "        for m in range(variable_card_M):\n",
+        "            col_idx = starter*6*variable_card_M + n_idx*variable_card_M + m\n",
+        "            if n >= m:\n",
+        "                cpd_winner_values[0, col_idx] = 1\n",
+        "            else:\n",
+        "                cpd_winner_values[1, col_idx] = 1\n",
+        "\n",
+        "cpd_winner = TabularCPD('Winner', 2, cpd_winner_values,\n",
+        "                        evidence=['Starter', 'N', 'M'],\n",
+        "                        evidence_card=[2, 6, variable_card_M])\n",
+        "\n",
+        "model.add_cpds(cpd_starter, cpd_n, cpd_flipper, cpd_m, cpd_winner)\n",
+        "assert model.check_model()\n",
+        "\n",
+        "inference = VariableElimination(model)\n",
+        "posterior_starter = inference.query(variables=['Starter'], evidence={'M': 1})\n",
+        "\n",
+        "print(posterior_starter)\n"
+      ]
     }
   ],
   "metadata": {
@@ -71,7 +254,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "pymc_env",
+      "display_name": "pmpenv",
       "language": "python",
       "name": "python3"
     },
@@ -85,7 +268,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.13"
+      "version": "3.12.7"
     }
   },
   "nbformat": 4,
